[package]
name = "adventofcode_2019"
version = "0.1.0"
authors = ["Dinesh Manajipet <saidinesh5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permute = "0.1.0"
num-integer = "0.1.41"

[[bin]]
path = "src/main.rs"
name = "adventofcode_2019"